# TurtleWoW_API

./: CMakeLists.txt  README.md
include/: API.h  Camera.h  Functions.h  GameObject.h  Offsets.h  Types.h
src/: API.cpp  API.h  Console.cpp  Console.h  Functions.cpp  Functions.h  Mem.h  Offsets.h  Types.h  Utils.cpp  Utils.h  main.cpp
src/API/: API.cpp  API.h  Camera.cpp  Camera.h  GameObject.cpp  Player.cpp  Player.h  Unit.cpp  Unit.h
